# F7-NFT-based-authentication

./: README.md  cabal.project  nft-based-authentication.cabal
pab/: Main.hs
src/: AuthNFTIssuer.hs  ProtectedResource.hs  Trace.hs  Utils.hs
