cabal-version:      2.4
name:               nft-based-authentication
version:            1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             gannith
maintainer:         gannith

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      AuthNFTIssuer,
      ProtectedResource,
      Utils,
      Trace
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      containers,
      freer-extras,
      playground-common,
      plutus-contract,
      plutus-ledger,
      plutus-ledger-constraints,
      plutus-tx,
      plutus-tx-plugin,
      text,
      plutus-ledger-api,
      lens,
      tasty,
      tasty-hunit
    hs-source-dirs: src

executable nft-based-authentication-pab
  import: lang
  main-is: Main.hs
  hs-source-dirs: pab
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    data-default -any,
    plutus-contract -any,
    plutus-pab -any,
    nft-based-authentication -any,
    aeson -any,
    freer-simple -any,
    prettyprinter -any,
    freer-extras -any,
    plutus-ledger -any,
    openapi3 -any,

